cmake_minimum_required(VERSION 3.31)
project(seson01 C)

set(CMAKE_C_STANDARD 23)

add_executable(seson01
        b6ss01.c
        b7ss01.c
        b8ss01.c
        PTIT-CNTT3-CTDL&GT-SS01-B9.c
        PTIT-CNTT3-CTDL&GT-SS01-B10.c
        PTIT-CNTT3-CTDL&GT-SS02-B1.c
        PTIT-CNTT3-CTDL&GT-SS02-B2.c
        PTIT-CNTT3-CTDL&GT-SS02-B3.c
        PTIT-CNTT3-CTDL&GT-SS02-B4.c
        PTIT-CNTT3-CTDL&GT-SS02-B5.c
        PTIT-CNTT3-CTDL&GT-SS02-B6.c
        PTIT-CNTT3-CTDL&GT-SS02-B7.c
        PTIT-CNTT3-CTDL&GT-SS02-B8.c
        PTIT-CNTT3-CTDL&GT-SS02-B9.c
        PTIT-CNTT3-CTDL&GT-SS02-B10.c
)
